--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,451 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+font-size: 1rem;
+line-height: 1.5;
+color: #373a3c;
+background-color: #fff;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* --------------- navbar-------------- */
+
+.App{
+  width: 100%;
+  background-color: #ebf3ff;
+}
+
+.fixed-top{
+  position: fixed;
+  top:0;
+  right:0;
+  left: 0;
+  z-index: 1030;
+}
+
+
+.navcontain{
+  background-color: white;
+  height: 75px;
+  border-bottom: 1px solid rgba(0,0,0,.12);
+}
+.navbar-brand{
+  margin-left: 20px;
+  font-weight: bold;
+}
+.brand .navbar-brand{
+  font-size: 30px;
+}
+.login{
+  margin-top: 40px;
+}
+
+.myform input[type='text']{
+  height: 30px;
+  width: 200px;
+  margin-left: 50px;
+}
+.joinbtn{
+  position: absolute;
+  right: 5px;
+}
+
+.navbar li{
+  margin-left: 20px;
+
+}
+.navbar li a{
+  color: black;
+  font-size: 12px;
+}
+.myform{
+  margin-left: 20px;
+  display: flex;
+}
+.searchbtn{
+ height: 30px;
+ background-color: blue;
+ color: white;
+
+}
+
+
+.navbar-nav li ul.dropdown{
+  width: 200px;
+  background-color: white;
+  position: absolute;
+  z-index: 999;
+  display: none;
+
+}
+.navbar-nav li ul.dropdown li{
+  display: block;
+  height: 50px;
+}
+.navbar-nav .dropdown li a:hover{
+  text-decoration: underline;
+}
+.navbar-nav li:hover ul.dropdown{
+  display: block; 
+}
+/* ---------------end of navbar-------------- */
+
+/* --------------- login form-------------- */
+
+.contain{
+  width: 500px;
+  background-color: white;
+  margin: auto;
+  box-shadow: 0 1px 6px rgba(31, 31, 31, 0.12), 0 1px 4px rgba(31, 31, 31, 0.12);;
+  margin-top: 70px;
+}
+.contain .inner-contain{
+  display: flex;
+  flex-direction: column;
+  width: 400px ;
+  margin: auto;
+}
+.formheader{
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+  letter-spacing: 5px;
+}
+.loginform{
+  display: flex;
+  flex-direction: column;
+  height: 250px;
+}
+.loginform label{
+  font-weight: bold;
+  font-size: 10px;
+}
+.email{
+  display: flex;
+  flex-direction: column;
+  margin: 10px 5px;
+
+}
+.email input[type='text']{
+  height: 40px;
+  width: 100%;
+  outline: none;
+  border: 2px solid black;
+}
+.password{
+  display: flex;
+  flex-direction: column;
+  margin: 10px 5px;
+}
+.password input[type='password']{
+  height: 40px;
+  width: 100%;
+  outline: none;
+  border: 2px solid black;
+}
+.submit{
+  margin: 10px 5px;
+}
+.social{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 10px;
+  background-color: white;
+}
+.social p{
+  margin-top: 10px;
+  font-size: 18px;
+}
+.newmember, .organization{
+  text-align: center;
+  
+}
+
+.newmember, .organization a{
+  text-decoration: none;
+}
+.loginbottom{
+  padding: 20px;
+  text-align: center;
+}
+.loginbottom a{
+  color: black;
+}
+/* ---------------end of login form-------------- */
+
+/* --------------- footer-------------- */
+
+.footer{
+  margin-top: 50px;
+  background-color: white;
+}
+
+.innerfooter{
+padding: 30px;
+}
+.innerfooter ul li a:hover{
+  text-decoration: underline;
+}
+.footbottom{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footbottom .footsocial{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: black;
+}
+.footbottom .footsocial a{
+  color: white;
+  border-radius: 10px;
+  margin: 5px 10px;
+}
+.togglewrap .mytoggle{
+  display: none;
+}
+
+/* ---------------end of footer-------------- */
+
+@media screen and (max-width:510px){
+  .contain{
+    width: 400px;
+    margin-top: 70px;
+
+  }
+  .footbottom{
+    display: flex;
+    flex-direction: column;
+  }
+  .mobileapp{
+    display: flex;
+    flex-direction: column;
+  }
+  .navlist{
+    position: absolute;
+    left: 0;
+    top: 75px;
+    background-color: white;
+    width: 100%;
+    transition: all 4s ease-in-out;
+    list-style: none;
+  }
+}
+@media screen and (max-width: 1200px){
+  nav .navbar-nav{
+    display: none;
+  }
+  .togglewrap .mytoggle{
+    display: block;
+    margin-left: 40px;
+  }
+  .navlist{
+    position: absolute;
+    left: 0;
+    top: 75px;
+    background-color: white;
+    width: 100%;
+    transition: all 4s ease-in-out;
+    list-style: none;
+  }
+  .navlist li{
+    padding: 20px;
+    
+  }
+ 
+  .navlist li a:hover{
+    text-decoration: underline;
+  }
+  .myform input[type='text']{
+    margin-top: 10px;
+
+  }
+  .searchbtn{
+    margin-top: 10px;
+  }
+
+  .contain{
+    width: 400px;
+    background-color: white;
+    margin: auto;
+    margin-top: 40px;
+    box-shadow: 1px 1px 4px black;
+    margin-top: 70px;
+
+    
+  }
+  .contain .inner-contain{
+    display: flex;
+    flex-direction: column;
+    width: 300px ;
+    margin: auto;
+  }
+  .formheader{
+    padding: 10px;
+    text-align: center;
+    font-size: 25px;
+    letter-spacing: 5px;
+  }
+
+  .navlist li ul.dropdown{
+    width: 200px;
+    background-color: white;
+    position: absolute;
+    z-index: 999;
+    display: none;
+
+  }
+  .navlist li ul.dropdown li{
+    display: block;
+    height: 50px;
+  }
+  .navlist .dropdown li a:hover{
+    text-decoration: underline;
+  }
+  .navlist li:hover ul.dropdown{
+    display: block; 
+  }
+}
+
+@media screen and (max-width: 448px){
+  .contain{
+    width: 300px;
+    background-color: white;
+    margin: auto;
+    margin-top: 30px;
+    box-shadow: 1px 1px 4px black;
+    margin-top: 70px;
+
+    
+  }
+  .contain .inner-contain{
+    display: flex;
+    flex-direction: column;
+    width: 200px ;
+    margin: auto;
+  }
+  .formheader{
+    padding: 8px;
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: 3px;
+  }
+  .navlist{
+    position: absolute;
+    left: 0;
+    top: 75px;
+    background-color: white;
+    width: 100%;
+    transition: all 4s ease-in-out;
+    list-style: none;
+  }
+ 
+}
+
+@media screen and (max-width: 316px){
+  .navlist{
+    position: absolute;
+    left: 0;
+    top: 75px;
+    background-color: white;
+    width: 100%;
+    transition: all 4s ease-in-out;
+    list-style: none;
+  }
+
+  .contain{
+    width: 200px;
+    background-color: white;
+    margin: auto;
+    margin-top: 20px;
+    box-shadow: 1px 1px 4px black;
+    margin-top: 70px;
+
+    
+  }
+  .contain .inner-contain{
+    display: flex;
+    flex-direction: column;
+    width: 150px ;
+    margin: auto;
+  }
+  .formheader{
+    padding: 8px;
+    text-align: center;
+    font-size: 10px;
+    letter-spacing: 1px;
+  }
+ 
+}
+@media screen and (max-width: 266px){
+  .contain{
+    width: 150px;
+    background-color: white;
+    margin: auto;
+    margin-top: 20px;
+    box-shadow: 1px 1px 4px black;
+    margin-top: 70px;
+
+    
+  }
+  .contain .inner-contain{
+    display: flex;
+    flex-direction: column;
+    width: 100px ;
+    margin: auto;
+  }
+  .myform input[type='text']{
+    height: 30px;
+    width: 100px;
+  }
+
+  .joinbtn{
+    width: 80px;
+    height: 35px;
+  } 
+
+  .mobileapp img{
+    width: 100px;
+  }
+  .footsocial{
+    display: flex;
+    flex-direction: column;
+  }
+  .social{
+    display: none;
+  }
+}
+
+/* ---------------end of login page-------------- */
+.regheader{
+  text-align: center;
+  padding: 10px;
+}
+
+.numofcht{
+  font-size: 10px;
+}
+.regsocial{
+  margin-top: 40px;
+}
+/* ---------------end of register page-------------- */
+
+.valid{
+  display: block;
+}
+.hide{
+  display: none;
+}
+/* ---------------end of validation page-------------- */
+
+
+
+
+
